--- a/catalog/view/template/common/menu.twig
+++ b/catalog/view/template/common/menu.twig
@@ -1,6 +1,6 @@
 {% if categories %}
   <div class="container">
-    <nav id="menu" class="navbar navbar-expand-lg navbar-light bg-primary">
+    <nav id="menu" class="navbar navbar-expand-lg navbar-light">
       <div id="category" class="d-block d-sm-block d-lg-none">{{ text_category }}</div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#narbar-menu"><i class="fa-solid fa-bars"></i></button>
       <div class="collapse navbar-collapse" id="narbar-menu">
