--- a/catalog/view/template/common/search.twig
+++ b/catalog/view/template/common/search.twig
@@ -1,4 +1,4 @@
-<div id="search" class="input-group mb-3">
+<div id="search" class="input-group">
 	<input type="text" name="search" value="{{ search }}" placeholder="{{ text_search }}" class="form-control form-control-lg">
 	<button type="button" data-lang="{{ language }}" class="btn btn-light btn-lg"><i class="fa-solid fa-magnifying-glass"></i></button>
 </div>
