--- a/catalog/view/template/common/menu.twig
+++ b/catalog/view/template/common/menu.twig
@@ -26,6 +26,25 @@
             {% endif %}
           {% endfor %}
         </ul>
+          <ul class="nav navbar-nav ms-auto">
+              <li class="nav-item">
+                  <a href="{{ account }}" class="dropdown-toggle see-all" data-bs-toggle="dropdown"><i class="fa-solid fa-user"></i> {{ text_account }} <i class="fa-solid fa-caret-down"></i></a>
+                  <div class="dropdown">
+                      <ul class="dropdown-menu dropdown-menu-right">
+                          {% if not logged %}
+                              <li><a href="{{ register }}" class="dropdown-item">{{ text_register }}</a></li>
+                              <li><a href="{{ login }}" class="dropdown-item">{{ text_login }}</a></li>
+                          {% else %}
+                              <li><a href="{{ account }}" class="dropdown-item">{{ text_account }}</a></li>
+                              <li><a href="{{ order }}" class="dropdown-item">{{ text_order }}</a></li>
+                              <li><a href="{{ transaction }}" class="dropdown-item">{{ text_transaction }}</a></li>
+                              <li><a href="{{ download }}" class="dropdown-item">{{ text_download }}</a></li>
+                              <li><a href="{{ logout }}" class="dropdown-item">{{ text_logout }}</a></li>
+                          {% endif %}
+                      </ul>
+                  </div>
+              </li>
+          </ul>
       </div>
     </nav>
   </div>
