--- a/catalog/view/template/product/thumb.twig
+++ b/catalog/view/template/product/thumb.twig
@@ -1,5 +1,5 @@
 <div class="product-thumb">
-  <div class="image"><a href="{{ href }}"><img src="{{ thumb }}" alt="{{ name }}" title="{{ name }}" class="img-fluid"/></a></div>
+  <div class="image"><a href="{{ href }}"><img src="{{ thumb }}" alt="{{ name }}" class="img-fluid"/></a></div>
   <div class="content">
     <div class="description">
       <h4><a href="{{ href }}">{{ name }}</a></h4>
