--- a/catalog/view/template/common/cart.twig
+++ b/catalog/view/template/common/cart.twig
@@ -1,5 +1,5 @@
 <div class="dropdown d-grid">
-  <button type="button" data-bs-toggle="dropdown" class="btn btn-lg btn-inverse btn-block dropdown-toggle"><i class="fa-solid fa-cart-shopping"></i> {{ text_items }}</button>
+  <button type="button" data-bs-toggle="dropdown" class="btn btn-lg btn-inverse btn-block dropdown-toggle"><i class="fa-solid fa-cart-shopping"></i></button>
   <ul class="dropdown-menu dropdown-menu-end p-2">
     {% if products or vouchers %}
       <li>
@@ -26,7 +26,6 @@
               <td class="text-end">x {{ product.quantity }}</td>
               <td class="text-end">{{ product.total }}</td>
               <td class="text-end">
-
                 <form action="{{ product_remove }}" method="post" data-oc-toggle="ajax" data-oc-load="{{ list }}" data-oc-target="#header-cart">
                   <input type="hidden" name="key" value="{{ product.cart_id }}">
                   <button type="submit" data-bs-toggle="tooltip" title="{{ button_remove }}" class="btn btn-danger"><i class="fa-solid fa-circle-xmark"></i></button>
@@ -34,7 +33,6 @@
               </td>
             </tr>
           {% endfor %}
-
           {% for voucher in vouchers %}
             <tr>
               <td class="text-center"></td>
@@ -49,9 +47,7 @@
               </td>
             </tr>
           {% endfor %}
-
         </table>
-
         <div>
           <table class="table table-sm table-bordered mb-2">
             {% for total in totals %}
