--- a/catalog/view/template/common/currency.twig
+++ b/catalog/view/template/common/currency.twig
@@ -1,13 +1,27 @@
 {% if currencies|length > 1 %}
-  <form action="{{ action }}" method="post" enctype="multipart/form-data" id="form-currency">
+  <form class="d-grid" action="{{ action }}" method="post" enctype="multipart/form-data"
+        id="form-currency">
+    <button type="button" href="#" data-bs-toggle="dropdown"
+            class="btn btn-lg btn-inverse btn-block dropdown-toggle see-all">
+      {% for currency in currencies %}
+        {% if currency.symbol_left and currency.code == code %}
+          <strong>{{ currency.symbol_left }}</strong>
+        {% elseif currency.symbol_right and currency.code == code %}
+          <strong>{{ currency.symbol_right }}</strong>
+        {% endif %}
+      {% endfor %}
+    </button>
     <div class="dropdown">
-      <a href="#" data-bs-toggle="dropdown" class="dropdown-toggle">{% for currency in currencies %}{% if currency.symbol_left and currency.code == code %}<strong>{{ currency.symbol_left }}</strong>{% elseif currency.symbol_right and currency.code == code %}<strong>{{ currency.symbol_right }}</strong>{% endif %}{% endfor %} <span class="d-none d-md-inline">{{ text_currency }}</span> <i class="fa-solid fa-caret-down"></i></a>
       <ul class="dropdown-menu">
         {% for currency in currencies %}
           {% if currency.symbol_left %}
-            <li><a href="{{ currency.code }}" class="dropdown-item">{{ currency.symbol_left }} {{ currency.title }}</a></li>
+            <li><a href="{{ currency.code }}"
+                   class="dropdown-item">{{ currency.symbol_left }} {{ currency.title }}</a>
+            </li>
           {% else %}
-            <li><a href="{{ currency.code }}" class="dropdown-item">{{ currency.symbol_right }} {{ currency.title }}</a></li>
+            <li><a href="{{ currency.code }}"
+                   class="dropdown-item">{{ currency.symbol_right }} {{ currency.title }}</a>
+            </li>
           {% endif %}
         {% endfor %}
       </ul>
