--- a/catalog/view/template/common/language.twig
+++ b/catalog/view/template/common/language.twig
@@ -1,17 +1,22 @@
 {% if languages|length > 1 %}
-  <div class="dropdown">
-    <div class="dropdown-toggle" data-bs-toggle="dropdown">
+  <div class="d-grid">
+    <button type="button" href="#" class="btn btn-lg btn-inverse btn-block dropdown-toggle see-all"
+            data-bs-toggle="dropdown">
       {% for language in languages %}
         {% if language.code == code %}
-          <img src="{{ language.image }}" alt="{{ language.name }}" title="{{ language.name }}">
+          <img src="{{ language.image }}" alt="{{ language.name }}" title="{{ language.name }}"/>
         {% endif %}
       {% endfor %}
-      <span class="d-none d-md-inline">{{ text_language }}</span> <i class="fa-solid fa-caret-down"></i>
+    </button>
+    <div class="dropdown">
+      <ul class="dropdown-menu">
+        {% for language in languages %}
+          <li><a href="{{ language.href }}" class="dropdown-item"><img src="{{ language.image }}"
+                                                                       alt="{{ language.name }}"
+                                                                       title="{{ language.name }}"/> {{ language.name }}
+            </a></li>
+        {% endfor %}
+      </ul>
     </div>
-    <ul class="dropdown-menu">
-      {% for language in languages %}
-        <li><a href="{{ language.href }}" class="dropdown-item"><img src="{{ language.image }}" alt="{{ language.name }}" title="{{ language.name }}"/> {{ language.name }}</a></li>
-      {% endfor %}
-    </ul>
   </div>
 {% endif %}
