--- a/catalog/view/template/common/menu.twig
+++ b/catalog/view/template/common/menu.twig
@@ -2,12 +2,14 @@
   <div class="container">
     <nav id="menu" class="navbar navbar-expand-lg navbar-light">
       <div id="category" class="d-block d-sm-block d-lg-none">{{ text_category }}</div>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#narbar-menu"><i class="fa-solid fa-bars"></i></button>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#narbar-menu"><i
+                class="fa-solid fa-bars"></i></button>
       <div class="collapse navbar-collapse" id="narbar-menu">
         <ul class="nav navbar-nav">
           {% for category in categories %}
             {% if category.children %}
-              <li class="nav-item dropdown"><a href="{{ category.href }}" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">{{ category.name }}</a>
+              <li class="nav-item dropdown"><a href="{{ category.href }}" class="nav-link dropdown-toggle"
+                                               data-bs-toggle="dropdown">{{ category.name }}</a>
                 <div class="dropdown-menu">
                   <div class="dropdown-inner">
                     {% for children in category.children|batch(category.children|length / category.column|round(1, 'ceil')) %}
@@ -26,25 +28,6 @@
             {% endif %}
           {% endfor %}
         </ul>
-          <ul class="nav navbar-nav ms-auto">
-              <li class="nav-item">
-                  <a href="{{ account }}" class="dropdown-toggle see-all" data-bs-toggle="dropdown"><i class="fa-solid fa-user"></i> {{ text_account }} <i class="fa-solid fa-caret-down"></i></a>
-                  <div class="dropdown">
-                      <ul class="dropdown-menu dropdown-menu-right">
-                          {% if not logged %}
-                              <li><a href="{{ register }}" class="dropdown-item">{{ text_register }}</a></li>
-                              <li><a href="{{ login }}" class="dropdown-item">{{ text_login }}</a></li>
-                          {% else %}
-                              <li><a href="{{ account }}" class="dropdown-item">{{ text_account }}</a></li>
-                              <li><a href="{{ order }}" class="dropdown-item">{{ text_order }}</a></li>
-                              <li><a href="{{ transaction }}" class="dropdown-item">{{ text_transaction }}</a></li>
-                              <li><a href="{{ download }}" class="dropdown-item">{{ text_download }}</a></li>
-                              <li><a href="{{ logout }}" class="dropdown-item">{{ text_logout }}</a></li>
-                          {% endif %}
-                      </ul>
-                  </div>
-              </li>
-          </ul>
       </div>
     </nav>
   </div>
