--- a/catalog/view/template/common/language.twig
+++ b/catalog/view/template/common/language.twig
@@ -1,6 +1,6 @@
 {% if languages|length > 1 %}
   <div class="d-grid">
-    <button type="button" href="#" class="btn btn-lg btn-inverse btn-block dropdown-toggle see-all"
+    <button type="button" href="#" class="btn btn-lg btn-inverse btn-block dropdown-toggle see-all d-flex align-items-center justify-content-center"
             data-bs-toggle="dropdown">
       {% for language in languages %}
         {% if language.code == code %}
