--- a/catalog/view/template/common/header.twig
+++ b/catalog/view/template/common/header.twig
@@ -48,13 +48,22 @@
           {% endif %}
         </div>
       </div>
-      <div class="col-md-9">
-        <div class="d-flex justify-content-end align-items-center">
-          <div class="col-md-5 px-2">{{ search }}</div>
-          <div id="header-cart" class="col-md-1 col-lg-1 px-2">{{ account }}</div>
+      <div class="header-container col-md-9">
+        <div class="justify-content-end align-items-center pc-layout">
+          <div class="col-md-5 pr-2">{{ search }}</div>
+          <div id="header-account" class="col-md-1 col-lg-1 px-2">{{ account }}</div>
           <div id="header-cart" class="col-md-1 col-lg-1 px-2">{{ cart }}</div>
-          <div id="header-cart" class="col-md-1 col-lg-1 px-2">{{ currency }}</div>
-          <div id="header-cart" class="col-md-1 col-lg-1 px-2">{{ language }}</div>
+          <div id="header-currency" class="col-md-1 col-lg-1 px-2">{{ currency }}</div>
+          <div id="header-language" class="col-md-1 col-lg-1 pl-2">{{ language }}</div>
+        </div>
+        <div class="flex-column align-items-end mobile-layout">
+          <div class="col-md-5 w-100">{{ search }}</div>
+          <div class="d-flex justify-content-between w-100">
+            <div id="header-account" class="flex-fill pr-2">{{ account }}</div>
+            <div id="header-cart" class="flex-fill px-2">{{ cart }}</div>
+            <div id="header-currency" class="flex-fill px-2">{{ currency }}</div>
+            <div id="header-language" class="flex-fill pl-2">{{ language }}</div>
+          </div>
         </div>
       </div>
     </div>
