--- a/catalog/view/stylesheet/stylesheet_dark.css
+++ b/catalog/view/stylesheet/stylesheet_dark.css
@@ -3,14 +3,14 @@
   src: url("./fonts/montserrat/Montserrat-Medium.ttf") format("truetype");
 }
 body {
-  background-color: #f8f8f8;
+  background-color: #222222;
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
   color: #666;
   font-size: 12px;
   line-height: 20px;
   width: 100%;
-  background-image: url("/image/paper-texture.png");
+  background-image: url("/image/paper-texture-dark.png");
 }
 h1, h2, h3, h4, h5, h6 {
   color: #444;
@@ -35,7 +35,7 @@ h6 {
   font-size: 10.2px;
 }
 a {
-  color: #7d5b80;
+  color: #ddd;
   text-decoration: none;
 }
 a:hover {
@@ -232,7 +232,7 @@ footer a {
 }
 /* header */
 header {
-  background-color: #222222;
+  background-color: #3c2f3c;
 }
 .header-container .pc-layout {
   display: flex;
@@ -258,10 +258,10 @@ header {
     justify-content: space-between !important;
   }
 }
-#header-cart, #header-account, #header-currency, #header-language, #header-theme {
+#header-cart, #header-account, #header-currency, #header-language {
   box-sizing: unset;
 }
-#header-cart i, #header-account i, #header-theme i  {
+#header-cart i, #header-account i, #header-theme i {
   font-size: 20px;
 }
 #header-currency strong {
@@ -270,19 +270,16 @@ header {
 #header-language img {
   width: 22px;
 }
-#header-theme .btn {
-  padding: 0;
-}
-#header-cart .btn-lg, #header-account .btn-lg, #header-currency .btn-lg, #header-language .btn-lg, #header-theme .btn-lg {
+#header-cart .btn-lg, #header-account .btn-lg, #header-currency .btn-lg, #header-language .btn-lg {
   color: #FFF;
   height: 40px;
   padding: 0 1rem;
-  background-color: #222222;
+  background-color: #3c2f3c;
 }
-#header-cart .btn-lg:hover, #header-account .btn-lg:hover, #header-currency .btn-lg:hover, #header-language .btn-lg:hover, #header-theme .btn-lg:hover {
-  background-color: #444444;
+#header-cart .btn-lg:hover, #header-account .btn-lg:hover, #header-currency .btn-lg:hover, #header-language .btn-lg:hover {
+  background-color: #4b394c;
 }
-#header-cart .btn:hover, #header-account .btn:hover, #header-currency .btn:hover, #header-language .btn:hover, #header-theme .btn:hover {
+#header-cart .btn:hover, #header-account .btn:hover, #header-currency .btn:hover, #header-language .btn:hover {
   color: #FFF;
 }
 #header-cart .dropdown-menu, #header-account .dropdown-menu, #header-currency .dropdown-menu, #header-language .dropdown-menu {
@@ -304,10 +301,10 @@ header {
 }
 /* menu */
 .menu-container {
-  background-color: #7d5b80;
+  background-color: #4b394c;
 }
 #menu {
-  background-color: #7d5b80;
+  background-color: #4b394c;
   border: 0;
   min-height: 40px;
 }
@@ -372,7 +369,7 @@ header {
   min-height: 15px;
 }
 #menu .navbar-nav > li > a:hover {
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: #423342;
   text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
 }
 @media (max-width: 767px) {
@@ -440,15 +437,14 @@ footer h5 {
 .breadcrumb {
   margin: 0 0 20px 0;
   padding: 8px 0;
-  border: 1px solid #ddd;
-  background-color: #f5f5f5;
+  border: 1px solid #424242;
+  background-color: #424242;
 }
 .breadcrumb i {
-  color: #7d5b80;
+  color: #ddd;
   font-size: 15px;
 }
 .breadcrumb > li.breadcrumb-item {
-  text-shadow: 0 1px 0 #FFF;
   padding: 0 20px;
   position: relative;
   white-space: nowrap;
@@ -571,9 +567,9 @@ footer h5 {
   background-color: #1b1b1b;
 }
 .product-thumb {
-  border: 1px solid #ddd;
+  border: 1px solid #5e5e5e;
   margin-bottom: 15px;
-  background-image: linear-gradient(to bottom, #ffffff, #eee);
+  background-image: linear-gradient(to bottom, #5e5e5e, #454545);
 }
 .product-thumb h4 {
   font-weight: bold;
@@ -591,7 +587,7 @@ footer h5 {
 }
 .product-thumb .button-group {
   display: flex;
-  border-top: 1px solid #ddd;
+  border-top: 1px solid #4a4a4a;
   background-color: #eee;
 }
 .product-thumb .button-group button {
@@ -599,7 +595,7 @@ footer h5 {
   border-radius: 0;
   display: inline-block;
   border: none;
-  background-color: #eee;
+  background-color: #5e5e5e;
   color: #888;
   line-height: 38px;
   font-weight: bold;
@@ -608,12 +604,13 @@ footer h5 {
 }
 .product-thumb .button-group button:hover {
   color: #444;
-  background-color: #ddd;
+  background-color: #858585;
   text-decoration: none;
   cursor: pointer;
 }
 .product-thumb .button-group button + button {
-  border-left: 1px solid #ddd;
+  background-color: #5e5e5e;
+  border-left: 1px solid #4a4a4a;
 }
 @media (min-width: 960px) {
   .product-list .product-thumb {
